# Video2Mesh

./: .gitignore  README.md  cli_args.py  orchestrator.py  pyproject.toml  requirements.txt
pipeline/: __init__.py  colmap_sfm.py  config.py  frames_loader.py  gaussian_splatting.py  general_utils.py  log_utils.py  mesh_extraction.py  utils.py
pipeline/stages/: colmap_sfm.py  frames_loader.py  gaussian_splatting.py  mesh_extraction.py
pipeline/utils/: general_utils.py  loss_utils.py
