[project]
name = "Video2Mesh"
version = "0.1.0"
description = "Video to 3D Mesh pipeline using 3DGS and SuGaR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easy-3dgs @ git+https://github.com/Jourdelune/easy-3dgs.git",
    "cached-property==1.5.2",
    "mpmath==1.3.0",
    "networkx==3.1",
    "opencv-python>=5.0.0.93",
    "pillow==10.0.1",
    "plotly==5.18.0",
    "plyfile==0.8.1",
    "portalocker==2.8.2",
    "pycolmap-cuda12>=3.10.0; sys_platform == 'linux'",
    "pycolmap>=3.10.0; sys_platform != 'linux'",
    "requests==2.31.0",
    "sympy==1.12",
    "tabulate==0.9.0",
    "termcolor==2.3.0",
    "tqdm==4.66.1",
    "yacs==0.1.8",
]

[project.scripts]
Video2Mesh-pipeline = "main:main"
